# flat

./: README.md  TODO.md  main.ipynb  manifest.in  setup.cfg  setup.py
docs/: conf.py  index.rst  requirements.txt
docs/modules/: abnumber.rst  clustalo.rst  coloring.rst  creating.rst  editing.rst  electrostatics.rst  exporting.rst  glycans.rst  hydrophobic.rst  importing.rst  minimizing.rst  modelling.rst  msms.rst  plotting.rst  prolif.rst  propka.rst  querying.rst  selecting.rst  shapes.rst  viewing.rst
docs/static/: glycans.csv
examples/: build_peptide.py
flat/: __init__.py  aaindex.py  abnumber.py  anarci.py  beautify.py  bfact.py  chi.py  clustalo.py  coloring.py  colors.py  com.py  count.py  creating.py  dipole.py  editing.py  electrostatics.py  exporting.py  ext_coef.py  fileio.py  fitting.py  flatcat.py  fullinit.py  glycans.py  graft.py  hydrophobic.py  importing.py  interface.py  minimize.py  minimizing.py  modelling.py  msms.py  ndxio.py  numeric.py  pka.py  plotting.py  prolif.py  propka.py  querying.py  selecting.py  seqalign.py  (+3 more)
flat/fragments/: README.md  csd.pkl  dah.pkl  ias.pkl  kyn.pkl  ocs.pkl  ohi.pkl  omt.pkl  pca.pkl  smc.pkl  snn.pkl  tpo.pkl
tests/: 1crn.face  1crn.pqr  1crn.vert  1crn.xyzr  1crn.xyzrn  1l6x.cif  9sfx.cif  references.bib
