[metadata]
name = flat
version = attr: flat.__version__
author = Jure Cerar
url = https://github.com/JureCerar/flat.git
description = PyMol Script Library/Collection/Repository
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pymol, computational chemistry, molecular visualization, structural biology
license = GPLv3
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =